Do minor refactor & seperate response models
