# internal/infra/server/api/response/stop-scheduler-response.go
@@ -1,0 +1,6 @@
+package response
+
+type StopSchedulerResponse struct {
+	Status  string `json:"status" example:"success"`
+	Message string `json:"message" example:"Message scheduler stopped successfully"`
+}
